--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <div class="container">
     <div class="left">
-      <img src="images/illustration-mockups.svg">
+      <img src="images/illustration-mockups.svg" alt="image1">
     </div>
 
     <div class="right">
