--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
         Create connections with your users as you engage in genuine discussion. </p>
 
-        <button class="btn"><p>Register</p></button>
+        <button class="btn">Register</button>
     </div>
   </div>
 
